Fix avatar overlapping name: increase bottom margin

--- a/_sass/_apple-custom.scss
+++ b/_sass/_apple-custom.scss
@@ -108,7 +108,7 @@ h1.page__title:empty {
 }
 
 .author__avatar {
-  margin-bottom: 0.6em;
+  margin-bottom: 1.2em;
 
   img {
     max-width: 150px !important;
